# circus

./: .editorconfig  Cargo.toml  LICENSE  README.md  flake.nix
.github/actions-rs/: grcov.yml
.github/workflows/: build-and-test.yaml  coverage.yml  security.yaml
circus-buggify/: Cargo.toml  README.md
circus-buggify/examples/: buggify.rs
circus-buggify/src/: lib.rs
circus-simulation/: Cargo.toml  README.md
circus-simulation/examples/: buggify.rs  simulation.rs
circus-simulation/src/: buggify.rs  file.rs  lib.rs  platform.rs
circus-simulation/src/deterministic/: mod.rs  platform.rs  random.rs  time.rs
circus-simulation/src/deterministic/fs/: file.rs  mod.rs
circus-simulation/src/deterministic/runtime/: executor.rs  mod.rs  reactor.rs  task.rs  timer.rs
circus-test/: Cargo.toml  README.md
circus-test/src/: lib.rs
circus-test/tests/: test.rs
simulation/: Cargo.toml  README.md
simulation/examples/: buggify.rs  executor.rs
simulation/src/: buggify.rs  lib.rs
simulation/src/deterministic/: mod.rs  random.rs  time.rs
simulation/src/deterministic/runtime/: executor.rs  mod.rs  reactor.rs  task.rs  timer.rs
test/: Cargo.toml  README.md
test/src/: lib.rs
test/tests/: test.rs
