[package]
name = "circus_buggify"
version = "0.1.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PierreZ/circus"
homepage = "https://github.com/PierreZ/circus"
documentation = "https://docs.rs/circus_buggify"

include = [
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
    "README.md",
    ".gitignore",
    "Cargo.toml",
    "src/*.rs",
    "src/*/*.rs",
    "tests/*.rs",
]

description = "A Rust port of the Buggify macro from FoundationDB"
categories = ["simulation"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
parking_lot = "0.12.0"
once_cell = "1.10.0"

[dev-dependencies]
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[badges]
coveralls = { repository = "PierreZ/circus", branch = "main", service = "github" }
maintenance = { status = "experimental" }
