[package]
name = "circus_simulation"
version = "0.0.1"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PierreZ/circus"
homepage = "https://github.com/PierreZ/circus"
documentation = "https://docs.rs/circus_simulation"

include = [
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
    "README.md",
    ".gitignore",
    "Cargo.toml",
    "src/*.rs",
    "src/*/*.rs",
    "tests/*.rs",
]

description = "Simulation framework inspired by FoundationDB"
categories = ["simulation"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
parking_lot = "0.12.0"
once_cell = "1.10.0"
tracing = "0.1.34"
futures = "0.3.21"
crossbeam-queue = "0.3.5"
enum_dispatch = "0.3.8"
async-trait = "0.1.53"

[dev-dependencies]
tracing-subscriber = "0.3.11"

[badges]
coveralls = { repository = "PierreZ/circus", branch = "main", service = "github" }
maintenance = { status = "experimental" }
