[package]
name = "circus_simulation"
version = "0.1.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PierreZ/circus"
homepage = "https://github.com/PierreZ/circus"
documentation = "https://docs.rs/circus_simulation"

include = [
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
    "README.md",
    ".gitignore",
    "Cargo.toml",
    "src/*.rs",
    "src/*/*.rs",
    "tests/*.rs",
]

description = "Simulation framework inspired by FoundationDB"
categories = ["simulation"]

[dependencies]
circus_buggify = { version = "0.1.0", path = "../circus-buggify"}
rand = { version = "0.8.5", features = ["small_rng"] }
parking_lot = "0.12.1"
once_cell = "1.16.0"
tracing = "0.1.37"
futures = "0.3.25"
crossbeam-queue = "0.3.7"
enum_dispatch = "0.3.8"
async-trait = "0.1.58"

[dev-dependencies]
tracing-subscriber = "0.3.16"

[badges]
coveralls = { repository = "PierreZ/circus", branch = "main", service = "github" }
maintenance = { status = "experimental" }
