[package]
name = "circus_test"
version = "0.1.0"
edition = "2018"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/PierreZ/circus"
homepage = "https://github.com/PierreZ/circus"
documentation = "https://docs.rs/circus_test"

include = [
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
    "README.md",
    ".gitignore",
    "Cargo.toml",
    "src/*.rs",
    "src/*/*.rs",
    "tests/*.rs",
]

description = "Procedural macro to inject a seed in your tests"
categories = ["simulation", "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
syn = { version = "1.0.94", features = ["full"] }
quote = "1.0.18"
