[package]
name = "circus-simulation"
version = "0.1.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
edition = "2018"

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
parking_lot = "0.11.1"
lazy_static = "1.4.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"